--- a/scss/0.base/_7.extends.scss
+++ b/scss/0.base/_7.extends.scss
@@ -18,6 +18,20 @@
 //   gap: 20px;
 // }
 
+%banner-button {
+  margin-top: 1.938rem;
+  margin-bottom: 1.125rem;
+  line-height: 52px;
+  padding: 5px 20px;
+  font-size: 1.25rem;
+  color: white !important;
+
+  text-transform: uppercase;
+  border-radius: 3px;
+  margin: 31px 0 18px 0;
+  display: inline-block;
+}
+
 %submenu {
   display: none;
   background-color: red;
