--- a/scss/1.layout/_4.banner.scss
+++ b/scss/1.layout/_4.banner.scss
@@ -1,3 +1,26 @@
+.slick-dots li button {
+  transform: translateY(-80px);
+  // overflow: hidden;
+}
+
+.slick-dots li button:before {
+  color: #cdcfd1;
+  font-size: 12px;
+  line-height: 25px;
+}
+
+.slick-dots li.slick-active button:before {
+  color: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  line-height: 24px;
+  font-size: 14px;
+  opacity: 1;
+  @include mq("medium") {
+    line-height: 22px;
+  }
+}
+
 .banner-item {
   position: relative;
 }
