--- a/scss/2.components/_1.sidebar.scss
+++ b/scss/2.components/_1.sidebar.scss
@@ -4,12 +4,16 @@
   width: 350px;
   background-color: #343645;
 
-  > ul > li > a {
-    font-size: 1rem;
-    padding: 20px;
-    display: block;
-    &:hover {
-      background-color: #3d404e;
+  > ul > li {
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+    & > a {
+      font-size: 1rem;
+      padding: 20px;
+      display: block;
+      &:hover {
+        background-color: #3d404e;
+      }
     }
   }
 
