--- a/scss/2.components/_1.sidebar.scss
+++ b/scss/2.components/_1.sidebar.scss
@@ -33,4 +33,50 @@
       }
     }
   }
+
+  position: fixed;
+  top: 0;
+  right: -350px;
+  height: 100%;
+  transition: right 0.5s ease-in-out;
+  overflow-y: auto;
+  z-index: 1000;
+
+  &.active {
+    right: 0;
+    cursor: pointer;
+  }
+}
+
+#container {
+  position: relative;
+  overflow-x: hidden;
+}
+.no-scroll {
+  overflow: hidden;
+  cursor: pointer;
+
+  &::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 999;
+  }
+}
+
+#main-content {
+  transition: transform 0.5s ease-in-out;
+  position: relative;
+
+  &.shifted {
+    transform: translateX(-350px);
+  }
+}
+
+#header-nav-button {
+  z-index: 1001;
 }
