--- a/css/main.css
+++ b/css/main.css
@@ -2353,9 +2353,14 @@ footer {
   width: 100%;
   z-index: 2000;
   background-color: white;
-  transition: top 0.5s ease-in-out; }
-
-.sticky-header.visible {
-  top: 0; }
+  transition: top 0.5s ease-in-out, transform 0.5s ease-in-out; }
+  .sticky-header.visible {
+    top: 0; }
+  .sticky-header.shifted {
+    transform: translateX(-250px);
+    z-index: 1; }
+  @media (min-width: 992px) {
+    .sticky-header.shifted {
+      transform: translateX(-350px); } }
 
 /*# sourceMappingURL=main.css.map */
