--- a/scss/1.layout/_1.header-top.scss
+++ b/scss/1.layout/_1.header-top.scss
@@ -81,6 +81,10 @@
   @include mq("small") {
     display: inline-block !important;
     width: 174px;
+    &:focus {
+      border-color: #5bc0de;
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(91, 192, 222, 0.6);
+    }
   }
 
   @include mq("medium") {
