--- a/css/main.css
+++ b/css/main.css
@@ -1200,6 +1200,15 @@ div {
 .slick-track {
   height: 600px; }
 
+.ipad-banner-quickfix {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; }
+  @media (min-width: 992px) {
+    .ipad-banner-quickfix {
+      display: block; } }
+
 .banner-item-image {
   position: absolute;
   top: 0;
