--- a/scss/1.layout/_3.submenu.scss
+++ b/scss/1.layout/_3.submenu.scss
@@ -58,6 +58,10 @@
   margin: 10px 0 0 -10px;
   padding: 10px;
   font-size: 1.2rem;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .icon {
