--- a/scss/1.layout/_10.footer.scss
+++ b/scss/1.layout/_10.footer.scss
@@ -121,6 +121,21 @@ footer {
   }
 }
 
+.footer-icons {
+  @media (min-width: 1px) and (max-width: 480px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    // gap: 10px;
+    width: 0;
+    & a {
+      margin: 0 0px 30px;
+      & span {
+        padding: 12px 40px 16px;
+      }
+    }
+  }
+}
+
 .footer-menu-flex {
   display: flex;
   flex-wrap: wrap;
